resources/assets/workshop-group-selector/k8s/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: workshop-group-selector
spec:
  replicas: 1
  selector:
    matchLabels:
      app: workshop-group-selector
  template:
    metadata:
      labels:
        app: workshop-group-selector
    spec:
      containers:
      - name: workshop-group-selector
        image: quay.io/luisarizmendi/workshop-group-selector:latest
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: config-volume
          mountPath: /app/config
      volumes:
      - name: config-volume
        configMap:
          name: group-config
---
apiVersion: v1
kind: Service
metadata:
  name: workshop-group-selector-service
spec:
  selector:
    app: workshop-group-selector
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: workshop-group-selector-route
  labels:
    app: workshop-group-selector
spec:
  to:
    kind: Service
    name: workshop-group-selector
  port:
    targetPort: 8080
  tls:
    termination: edge
  wildcardPolicy: None
